cmake_minimum_required(VERSION 3.27)
project(Algorithm)

set(CMAKE_CXX_STANDARD 20)

include_directories(
        LeetCode
)

add_executable(Algorithm LeetCode/main.cc)
add_executable(strange_donation 奇怪的捐赠.cc)
add_executable(sum_of_squares 平方和.cc)

add_executable(kmp LeetCode/kmp.cc)
add_executable(minSubArray LeetCode/minSubArray.cc)
add_executable(CharacterCount LeetCode/CharacterCount.c)
add_executable(MoveLaToLb LeetCode/MoveLaToLb.c)
add_executable(evalRPN LeetCode/evalRPN.cpp)
add_executable(LRUCache LeetCode/LRUCache.cpp)
add_executable(LongestSubstr LeetCode/LongestSubstr.cpp)
add_executable(InvertTree LeetCode/InvertTree.cpp)
add_executable(fib LeetCode/fib.cpp)
add_executable(climbStairs LeetCode/climbStairs.cpp)
add_executable(BuildTree LeetCode/BuildTree.cpp)
add_executable(UniquePaths LeetCode/UniquePaths.cpp)
add_executable(ls LeetCode/ls.c)
add_executable(hIndex LeetCode/hIndex.cpp)
add_executable(preOrderLayer LeetCode/preOrderLayer.c)
add_executable(SwapLR LeetCode/SwapLR.c)
add_executable(Huffman LeetCode/Huffman.c)
add_executable(huffman LeetCode/huffman.cpp)
add_executable(huffman2c LeetCode/huffman2c.c)
add_executable(hashmap LeetCode/hashmap.c)
add_executable(lab4 LeetCode/lab4.c)
add_executable(sortArray LeetCode/sortArray.cpp LeetCode/sortArray.h)
add_executable(sortArray2 LeetCode/sortArray2.cpp)
add_executable(215 LeetCode/215.cpp)
add_executable(146 LeetCode/146.cpp)
add_executable(42 LeetCode/42.cpp)
add_executable(300 LeetCode/300.cpp)
add_executable(703 LeetCode/703.cpp)
add_executable(6 6买二赠一.cpp)
add_executable(4 4.更小的数.cpp)
add_executable(295 LeetCode/295.cpp)
add_executable(200 LeetCode/200.cpp)
add_executable(236 LeetCode/236.cpp)
add_executable(235 LeetCode/235.cc)
add_executable(1 LeetCode/1.cc)
add_executable(33 LeetCode/33.cc)
add_executable(irrigation 灌溉-DFS.cc)
add_executable(diff 次数差.cc)
add_executable(substr 不同字串.cc)
add_executable(day 含2天数.cc)
add_executable(asc 数位递增的数.cc)
add_executable(sum 求和.cc)
add_executable(train_soldiers TrainSoldiers.cc)
add_executable(maximum maximumLength.cc)
